deploy/deployment_postgres.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: air-hockey-api
  labels: 
    app: api
spec:
  ports:
    - port: 5432
  selector:
    app: api
    tier: database
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: postgres
  namespace: air-hockey-api
  labels:
    app: api
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: api
      tier: database
  template:
    metadata:
      name: postgres
      labels:
        app: api
        tier: database
    spec:
      volumes:
      - name: postgres-pv
        persistentVolumeClaim:
          claimName: postgres-pvc
      containers:
      - name: postgres
        image: postgres:9.6-alpine
        ports:
        - containerPort: 5432
