deploy/deployment_rails.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-ingress
  namespace: air-rockey-api
  labels:
    app: api
  annotations:  
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
  - hosts:
    - rockey-api.lappis.rocks
    secretName: letsencrypt-prod
  rules:
  - host: rockey-api.lappis.rocks
    http:
      paths:
      - backend:
          serviceName: api-service
          servicePort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: api-service
  namespace: air-rockey-api
  labels: 
    app: api
spec:
  selector:
    app: api
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: api
  namespace: air-rockey-api
  labels: 
    app: api
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: ${CICD_IMAGE}:${CICD_EXECUTION_SEQUENCE}
        ports:
        - containerPort: 3000
